--- a/RealTime_Text_Check/index.html
+++ b/RealTime_Text_Check/index.html
@@ -113,6 +113,6 @@
   <body>
       <label> Enter Input </label>
 
-      <input type = "text" placeholder="Enter Test" name = "intext" id ="intext"  required>
+      <input type = "text" placeholder="Enter Text" name = "intext" id ="intext"  required>
   </body>
 </html>
